Inference at fetch